fix category container to handle overflow correctly with fixed header. Also style elements properly

--- a/styles/tasks2.scss
+++ b/styles/tasks2.scss
@@ -18,20 +18,21 @@
 
     article {
       width: 22%;
-      // border: solid 3px black;
       box-shadow: 5px 10px 5px #888888;
-      border-radius: 7px;
-      height: 600px;
-      overflow: scroll;
+      height: 500px;
+      position: relative;
+      border-radius: 12px;
 
       header {
+        border-top-left-radius: 12px;
+        border-top-right-radius: 12px;
         display: flex;
         flex-direction: row;
         justify-content: center;
         font-family: 'Baloo Tamma', cursive;
         font-size: 1.2rem;
-        border-bottom: solid 1px gray;
         background-color: #7e7d7d;
+
 
         div {
           display: flex;
@@ -48,7 +49,16 @@
         font-family: 'Roboto', sans-serif;
         font-size: 1rem;
         overflow-wrap: break-word;
-        // height: 600px;
+        overflow: scroll;
+        position: absolute;
+        height: calc(100% - 52px);
+        width: 100%;
+        border-bottom-left-radius: 12px;
+        border-bottom-right-radius: 12px;
+        // top: 0px;
+        // right: 0px;
+        // bottom: 0px;
+        // left: 0px;
         // li {
         //   margin: 5px 0;
         // }
